[gd_scene load_steps=4 format=3 uid="uid://ds3hknl0ra30c"]

[ext_resource type="Script" uid="uid://xmiunouio1fb" path="res://Scenes/game_end.gd" id="1_wl1fq"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wl1fq"]

[sub_resource type="CylinderMesh" id="CylinderMesh_n3sjg"]

[node name="GameEnd" type="Area3D"]
script = ExtResource("1_wl1fq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_wl1fq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_n3sjg")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
